package symboltable;

public abstract class FunctionOrVariable extends Symbol {}
